--- a/manager_tejeduria.html
+++ b/manager_tejeduria.html
@@ -5,13 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANAGER TEJEDURIA</title>
+    <link rel="stylesheet" href="../../gestor/lib/bootstrap/bootstrap-5.1.0/css/bootstrap.css">
+    <link rel="stylesheet" href="../../gestor/lib/fontawesome-free-6.1.1-web/css/all.css">
+    <link rel="stylesheet" href="css/manager_tejeduria.css">
 </head>
 <body>
-    <h1>INICIAL</h1>
+    <div id="App">
+        <nav_bar></nav_bar>
+        <div class="layout">
+            <bloque :block="10" :datos="getBloque(10)"></bloque>
+            <bloque :block="9" :datos="getBloque(9)"></bloque>        
+            <div class="pasillo"></div>
+            <bloque :block="8" :datos="getBloque(8)"></bloque>
+            <bloque :block="7" :datos="getBloque(7)"></bloque>        
+            <div class="pasillo"></div>
+            <bloque :block="6" :datos="getBloque(6)"></bloque>
+            <bloque :block="5" :datos="getBloque(5)"></bloque>        
+            <div class="pasillo"></div>
+            <bloque :block="4" :datos="getBloque(4)"></bloque>
+            <bloque :block="3" :datos="getBloque(3)"></bloque>        
+            <div class="pasillo"></div>
+            <bloque :block="2" :datos="getBloque(2)"></bloque>
+            <bloque :block="1" :datos="getBloque(1)"></bloque> 
+        </div>       
+    </div>
 </body>
 <script src="../../gestor/lib/vue/vue.js" type="text/javascript"></script>
 <script src="../../gestor/lib/vue/vuex.js" type="text/javascript"></script>
 <script src="../../gestor/lib/vue/axios.js" type="text/javascript"></script>
+<script src="components/nav_bar.js" type="text/javascript"></script>
+<script src="components/bloque.js" type="text/javascript"></script>
 </html>
 <script>
    
@@ -25,7 +48,7 @@
         el: '#App',
         store: store,
         data:{            
-                           
+            datos:[]               
         },
         mounted: function() {    
             /*this.getDatos_texman();              
@@ -38,9 +61,25 @@
             },20000);    */
 
             console.log("Mounted")
+            this.getDatos();
             
         },
         methods:{
+            async getDatos(){
+                await axios.get('modulos/mod_manager_tejeduria.php?flag=1').then(ress => {		
+                    this.datos = ress.data;
+                    console.log(this.datos)
+                }).catch(e => {
+                    console.log(e)
+                }); 
+            },
+            getBloque(blk){
+                const datos_bloque = this.datos.filter(function(arr) {/*filtro unicamente las cabeceras*/
+                        return (arr.BLOQUE == blk);
+                    });   
+                console.log("DATOS",datos_bloque);
+                return datos_bloque;
+            },
         }
     })
 </script>
