--- a/manager_tejeduria.html
+++ b/manager_tejeduria.html
@@ -8,40 +8,45 @@
     <link rel="stylesheet" href="../../gestor/lib/bootstrap/bootstrap-5.1.0/css/bootstrap.css">
     <link rel="stylesheet" href="../../gestor/lib/fontawesome-free-6.1.1-web/css/all.css">
     <link rel="stylesheet" href="css/manager_tejeduria.css">
+      
 </head>
 <body>
     <div id="App">
-        <nav_bar></nav_bar>
-        <div class="layout">
-            <bloque :block="10" :datos="getBloque(10)"></bloque>
-            <bloque :block="9" :datos="getBloque(9)"></bloque>        
-            <div class="pasillo"></div>
-            <bloque :block="8" :datos="getBloque(8)"></bloque>
-            <bloque :block="7" :datos="getBloque(7)"></bloque>        
-            <div class="pasillo"></div>
-            <bloque :block="6" :datos="getBloque(6)"></bloque>
-            <bloque :block="5" :datos="getBloque(5)"></bloque>        
-            <div class="pasillo"></div>
-            <bloque :block="4" :datos="getBloque(4)"></bloque>
-            <bloque :block="3" :datos="getBloque(3)"></bloque>        
-            <div class="pasillo"></div>
-            <bloque :block="2" :datos="getBloque(2)"></bloque>
-            <bloque :block="1" :datos="getBloque(1)"></bloque> 
-        </div>       
+            <nav_bar></nav_bar>
+            <div class="layout">
+                <bloque :block="10" :datos="getBloque(10)"></bloque>
+                <bloque :block="9"  :datos="getBloque(9)"></bloque>
+                <div class="pasillo"></div>
+                <bloque :block="8" :datos="getBloque(8)"></bloque>
+                <bloque :block="7" :datos="getBloque(7)"></bloque>
+                <div class="pasillo"></div>
+                <bloque :block="6" :datos="getBloque(6)"></bloque>
+                <bloque :block="5" :datos="getBloque(5)"></bloque>
+                <div class="pasillo"></div>
+                <bloque :block="4" :datos="getBloque(4)"></bloque>
+                <bloque :block="3" :datos="getBloque(3)"></bloque>
+                <div class="pasillo"></div>
+                <bloque :block="2" :datos="getBloque(2)"></bloque>
+                <bloque :block="1" :datos="getBloque(1)"></bloque>                
+            </div>     
+            <info_maq></info_maq>  
     </div>
 </body>
+<script src="../../gestor/lib/jquery/jquery-3.4.1.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="../../gestor/lib/bootstrap/bootstrap-5.1.0/js/bootstrap.bundle.js"></script> 
 <script src="../../gestor/lib/vue/vue.js" type="text/javascript"></script>
 <script src="../../gestor/lib/vue/vuex.js" type="text/javascript"></script>
 <script src="../../gestor/lib/vue/axios.js" type="text/javascript"></script>
 <script src="components/nav_bar.js" type="text/javascript"></script>
 <script src="components/bloque.js" type="text/javascript"></script>
+<script src="components/info_maq.js" type="text/javascript"></script>
 </html>
 <script>
    
    
     const store = new Vuex.Store({
         state: {            
-           
+           info_maq:[]
         }
     });    
     var app = new Vue({
