--- a/manager_tejeduria.html
+++ b/manager_tejeduria.html
@@ -41,6 +41,7 @@
 <script src="components/bloque.js" type="text/javascript"></script>
 <script src="components/info_maq.js" type="text/javascript"></script>
 <script src="components/info_tablet.js" type="text/javascript"></script>
+<script src="components/datos_logo.js" type="text/javascript"></script>
 </html>
 <script>
    
