--- a/manager_tejeduria.html
+++ b/manager_tejeduria.html
@@ -49,6 +49,7 @@
     const store = new Vuex.Store({
         state: {            
            info_maq:[],
+           interval_logo:null
         }
     });    
     var app = new Vue({
